# filament-encoder-calibration

./: README.md  install.sh
config/: encoder_calibration.cfg  rotation_distance.cfg
encoder-pico/: CMakeLists.txt  README.md
encoder-pico/src/: btstack_config.h  encoder.gatt  gatt.cpp  gatt.hpp  lwipopts.h  main.cpp
encoder-pico/src/adc/: hall_sensor.cpp  hall_sensor.hpp
encoder-pico/src/encoder/: as5048a.cpp  as5048a.hpp  filament_tracker.cpp  filament_tracker.hpp
encoder-pico/src/gatt/: encoder_service.cpp  encoder_service.hpp
extras/: encoder_calibration.py  filament_width_sensor_corrected.py
firmware/: encoder_calibration.uf2
